create csvutils.java for count, cleanup warnings in file.